# p0

./: .gitignore  META  Makefile  README  README.md  README.org  TODO  dune-project  p0.ml  p0_example.ml  p0_lib.opam
_bin/: dune
docs/: index.html
docs/p0_lib/: index.html
docs/p0_lib/P0_lib/: index.html
docs/p0_lib/P0_lib/Internal/: index.html
docs/p0_lib/P0_lib/Internal/Export/: index.html
docs/p0_lib/P0_lib/Internal/Make/: index.html
docs/p0_lib/P0_lib/Internal/Make/Monad/: index.html
docs/p0_lib/P0_lib/Internal/Make/argument-1-I/: index.html
docs/p0_lib/P0_lib/Internal/Make/argument-2-IM/: index.html
docs/p0_lib/P0_lib/Internal/Ocaml_re_instance/: index.html
docs/p0_lib/P0_lib/Internal/Re_/: index.html
docs/p0_lib/P0_lib/Internal/StringI/: index.html
docs/p0_lib/P0_lib/Internal/StringIM/: index.html
docs/p0_lib/P0_lib/Internal/module-type-I/: index.html
docs/p0_lib/P0_lib/Internal/module-type-IM/: index.html
docs/p0_lib/P0_lib/Internal/module-type-I_WITH_MONAD/: index.html
docs/p0_lib/P0_lib/Internal/module-type-RE/: index.html
docs/p0_lib/P0_lib/Monad/: index.html
docs/p0_lib/P0_lib/Monad/Internal/: index.html
docs/p0_lib/P0_lib/P0/: index.html
docs/p0_lib/P0_lib/P0/Internal/: index.html
docs/p0_lib/P0_lib/P0/Make/: index.html
docs/p0_lib/P0_lib/P0/Monad/: index.html
docs/p0_lib/P0_lib/P0/P0_str/: index.html
docs/p0_lib/P0_lib/P0/Str_/: index.html
docs/p0_lib/P0_lib/P0/X_/: index.html
docs/p0_lib/P0_lib/P0/module-type-RE/: index.html
docs/p0_lib/P0_lib/Str_/: index.html
docs/p0_lib/P0_lib/Str_re/: index.html
docs/p0_lib/P0_lib/String_util/: index.html
docs/p0_lib/P0_lib/Types/: index.html
docs/p0_lib/P0_lib__P0/: index.html
docs/p0_lib/P0_lib__P0/Internal/: index.html
docs/p0_lib/P0_lib__P0/Internal/Export/: index.html
docs/p0_lib/P0_lib__P0/Internal/Make/: index.html
docs/p0_lib/P0_lib__P0/Internal/Ocaml_re_instance/: index.html
docs/p0_lib/P0_lib__P0/Internal/Re_/: index.html
docs/p0_lib/P0_lib__P0/Internal/StringI/: index.html
docs/p0_lib/P0_lib__P0/Internal/StringIM/: index.html
docs/p0_lib/P0_lib__P0/Internal/module-type-I/: index.html
docs/p0_lib/P0_lib__P0/Internal/module-type-I_WITH_MONAD/: index.html
docs/p0_lib/P0_lib__P0/Internal/module-type-RE/: index.html
docs/p0_lib/P0_lib__P0/Make/: index.html
docs/p0_lib/P0_lib__P0/Make/Internal/: index.html
docs/p0_lib/P0_lib__P0/Make/P0_internal/: index.html
docs/p0_lib/P0_lib__P0/Make/argument-1-Re/: index.html
docs/p0_lib/P0_lib__P0/Monad/: index.html
docs/p0_lib/P0_lib__P0/Monad/Internal/: index.html
docs/p0_lib/P0_lib__P0/P0_str/: index.html
docs/p0_lib/P0_lib__P0/P0_str/Internal/: index.html
docs/p0_lib/P0_lib__P0/P0_str/P0_internal/: index.html
docs/p0_lib/P0_lib__P0/Str_/: index.html
docs/p0_lib/P0_lib__P0/X_/: index.html
docs/p0_lib/P0_lib__P0/module-type-RE/: index.html
docs/p0_lib/P0_lib__Str_re/: index.html
docs/p0_lib/P0_lib__String_util/: index.html
docs/p0_lib/P0_lib__Types/: index.html
src/: .merlin  dune  p0.ml  p0_2017.ml  p0_2021.ml  p0_lib.ml  re_test.ml_  str_re.ml  str_re.ml_  string_util.ml
src/_old/: types.ml_
(+62 files in other folders)
