opam-version: "1.2"
name: "p0_lib"
version: "0.0.1" # version should match a VERSION file in this dir?

# ----------------------------------------------------------------------

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"

# ----------------------------------------------------------------------

depends: [
  "str"
  "ocaml-re"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]
